kubernetes/services/localai/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: localai
  labels:
    name: localai
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
